Added Details page

--- a/app/views/userList.xml
+++ b/app/views/userList.xml
@@ -1,18 +1,16 @@
 <Alloy>
 	<Collection src="userModel"/>
-	<Window class="container" id="userList" title="User List" >
-		<View>
-			<ListView width="100%">
-				<HeaderView>
-					<View backgroundColor="#ddd" height="30">
-						<Label class="status">Online</Label>
-						<Label class="userName">User Name</Label>
-					</View>
-				</HeaderView>
-				<ListSection dataCollection="userModel">
-					<ListItem  image="/images/{Status}.png" height="40" title="{Name}"/>
-				</ListSection>
-			</ListView>
-		</View>
+	<Window class="container" id="userList">
+		<ListView width="100%" onItemclick="userDetail">
+			<HeaderView>
+				<View backgroundColor="#ddd" height="30">
+					<Label class="status">Online</Label>
+					<Label class="userName">User Name</Label>
+				</View>
+			</HeaderView>
+			<ListSection dataCollection="userModel">
+				<ListItem  image="/images/{Status}.png" height="40" title="{Name}"/>
+			</ListSection>
+		</ListView>
 	</Window>
 </Alloy>
