--- a/app/views/userDetails.xml
+++ b/app/views/userDetails.xml
@@ -1,11 +1,10 @@
 <Alloy>
-	<Model src="details"></Model>
 	<Window class="container" id="userDetails" title="User Details">
 		<View layout="vertical" top="20">
-			<Label id="detailName">NAME: {details.name}</Label>
-			<Label id="detailStatus">STATUS: {details.status}</Label>
-			<Label id="detailPhone">PHONE: {details.phone}</Label>
-			<Label id="detailLoc">LOCATION: {details.location}</Label>
+			<Label id="detailName">NAME: {name}</Label>
+			<Label id="detailStatus">STATUS: {status}</Label>
+			<Label id="detailPhone">PHONE: {phone}</Label>
+			<Label id="detailLoc">LOCATION: {location}</Label>
 		</View>
 	</Window>
 </Alloy>
